force-app/main/default/objects/Mentor_Session__c/Mentor_Session__c.object-meta.xml
<CustomObject>
    <label>Mentor Session</label>
    <nameField>
        <displayFormat>MS{00000}</displayFormat>
        <label>Mentor Session ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentor Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>