force-app/main/default/objects/Mentor_Session__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost (GBP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>