force-app/main/default/objects/Mentor_Session__c/fields/HTML_Color_Code__c.field-meta.xml
<CustomField>
    <fullName>HTML_Color_Code__c</fullName>
    <formula>IF(CONTAINS( Project__r.Name, &quot;Extension&quot;), &quot;#FFB533&quot; , IF(AND(ISPICKVAL(Session_Type__c, &quot;Mentoring&quot;), NOT(CONTAINS( Project__r.Name, &quot;Extension&quot;))), &quot;#A4E7FF&quot;, IF(AND(ISPICKVAL(Session_Type__c, &quot;Training&quot;), NOT(CONTAINS( Project__r.Name, &quot;Extension&quot;))), &quot;#92efc8&quot; , &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HTML Color Code</label>
    <type>Text</type>
</CustomField>