force-app/main/default/objects/Mentor_Session__c/fields/Mentee__c.field-meta.xml
<CustomField>
    <fullName>Mentee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mentor Sessions (Mentee)</relationshipLabel>
    <relationshipName>Mentor_Sessions1</relationshipName>
    <type>Lookup</type>
</CustomField>