force-app/main/default/objects/Mentor_Session__c/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mentor Sessions</relationshipLabel>
    <relationshipName>Mentor_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>