force-app/main/default/objects/Mentor_Session__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF(ISBLANK(Mentee__c), Project__r.Name&amp;&quot; - &quot;&amp;TEXT(Session_Type__c)&amp;&quot; - &quot;&amp;TEXT(Cost__c), Project__r.Name&amp;&quot; - &quot;&amp;TEXT(Session_Type__c)&amp;&quot; - &quot;&amp;Mentee__r.psa_report__Resource_Name__c&amp;&quot; - &quot;&amp;TEXT(Cost__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>