force-app/main/default/objects/Mentor_Session__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>pse__Proj__c.pse__Region__r.Name</field>
            <operation>contains</operation>
            <value>Mentore</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipName>Mentor_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>