force-app/main/default/objects/Mentor_Session__c/fields/Session_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Session_Date_2__c</fullName>
    <label>Session Date</label>
    <type>Date</type>
</CustomField>