force-app/main/default/objects/Mentor_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Mentee__c</columns>
    <columns>Mentor__c</columns>
    <columns>Session_Type__c</columns>
    <columns>Session_Date_2__c</columns>
    <columns>Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>